--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ classifier =
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
-    Topic :: System :: System Administration
+    Topic :: System :: Systems Administration
 
 [files]
 packages =
