update to newest pbr

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = Ryan Belgrave
 author-email = rmb1993@gmail.com
 summary = Library and Tool to run a Cloud-Init NoCloud compatible metadata server for VMWare VCenter
 description-file = README.rst
+description-content-type = text/x-rst; charset=UTF-8
 home-page = https://github.com/rmb938/vmw-cloudinit-metadata/
 license = MIT
 classifier =
